fix z-index

--- a/easy-ui-react/src/Modal/Modal.module.scss
+++ b/easy-ui-react/src/Modal/Modal.module.scss
@@ -3,6 +3,7 @@
 
 .underlayBg {
   position: fixed;
+  z-index: design-token("z-index.modal");
   display: flex;
   flex-direction: column;
   &::before {
